--- a/ZXing.Net.Mobile/ZXing.Net.Mobile.csproj
+++ b/ZXing.Net.Mobile/ZXing.Net.Mobile.csproj
@@ -2,16 +2,14 @@
   <PropertyGroup>
     <AssemblyName>ZXingNetMobile</AssemblyName>
     <RootNamespace>ZXing.Net.Mobile</RootNamespace>
-    <PackageId>ZXing.Net.Mobile</PackageId>
+    <PackageId>NotCat.ZXing.Net.Mobile</PackageId>
     <PackageIcon>icon.png</PackageIcon>
     <Summary>ZXing Barcode Scanning for your Xamarin.iOS, Xamarin.Android and Windows Universal apps!</Summary>
     <PackageTags>
     </PackageTags>
-    <Title>ZXing.Net.Mobile Barcode Scanner</Title>
+    <Title>Not Cat ZXing.Net.Mobile Barcode Scanner</Title>
     <Description>
-      ZXing.Net.Mobile is a C#/.NET library based on the open source Barcode Library: ZXing (Zebra Crossing), using the ZXing.Net Port. It works with Xamarin.iOS, Xamarin.Android, Tizen and Windows Universal (UWP). The goal of ZXing.Net.Mobile is to make scanning barcodes as effortless and painless as possible in your own applications.
-
-      See https://github.com/Redth/ZXing.Net.Mobile/releases for release notes.
+      net7.0
     </Description>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
     <AssemblyVersion>3.0.0.0</AssemblyVersion>
@@ -50,8 +48,8 @@
   </PropertyGroup>
   <ItemGroup Condition=" '$(Configuration)'=='Release' And '$(OS)' == 'Windows_NT' ">
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.6" />
-    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.6" />
+    <!--<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.6" />
+    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.6" />-->
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Art\ZXing.Net.Mobile-Icon.png" PackagePath="icon.png" Pack="true" />
@@ -65,23 +63,6 @@
   <ItemGroup Condition=" $(TargetFramework.StartsWith('uap10.0')) ">
     <Compile Include="**\*.uwp.cs" />
     <Compile Include="**\*.uwp.*.cs" />
-    <Compile Include="ScanPage.xaml.cs">
-      <DependentUpon>ScanPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ZXingScannerControl.xaml.cs">
-      <DependentUpon>ZXingScannerControl.xaml</DependentUpon>
-    </Compile>
-    <Page Include="ScanPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="ZXingScannerControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <None Update="ZXingScannerControl.xaml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <SDKReference Include="WindowsMobile, Version=10.0.16299.0">
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
